updated markitup style.css with namespacing so that the correct styles are applied when loading different markup editors

--- a/public/stylesheets/markitup/sets/css/style.css
+++ b/public/stylesheets/markitup/sets/css/style.css
@@ -4,69 +4,69 @@
 //
 // CSS Set by Kevin Papst - http://www.kevinpapst.de/
 // ------------------------------------------------------------------*/
-.markItUp .class a {
+.css .class a {
 	background-image:url(images/tag.png);
 }
-.markItUp .bold a {
+.css .bold a {
 	background-image:url(images/bold.png);
 }
-.markItUp .italic a {
+.css .italic a {
 	background-image:url(images/italic.png);
 }
-.markItUp .stroke a {
+.css .stroke a {
 	background-image:url(images/stroke.png);
 }
-.markItUp .lowercase a {
+.css .lowercase a {
 	background-image:url(images/text_lowercase.png); 
 }
-.markItUp .uppercase a {
+.css .uppercase a {
 	background-image:url(images/text_uppercase.png); 
 }
 
-.markItUp .alignments a {
+.html .alignments a {
 	background-image:url(images/text_align_left.png); 
 }
-	.markItUp .alignments .left a {
+	.html .alignments .left a {
 		background-image:url(images/text_align_left.png); 
 	}
-	.markItUp .alignments .center a {
+	.html .alignments .center a {
 		background-image:url(images/text_align_center.png); 
 	}
-	.markItUp .alignments .right a {
+	.html .alignments .right a {
 		background-image:url(images/text_align_center.png); 
 	}
-	.markItUp .alignments .justify a {
+	.html .alignments .justify a {
 		background-image:url(images/text_align_justify.png); 
 	}
 
-.markItUp .indent a {
+.html .indent a {
 	background-image:url(images/text_indent.png); 
 }
-.markItUp .letterspacing a {
+.html .letterspacing a {
 	background-image:url(images/text_letterspacing.png); 
 }
-.markItUp .lineheight a {
+.html .lineheight a {
 	background-image:url(images/text_linespacing.png); 
 }
 
-.markItUp .padding a {
+.html .padding a {
 	background-image:url(images/text_padding_left.png); 
 }
-	.markItUp .padding .left a {
+	.html .padding .left a {
 		background-image:url(images/text_padding_left.png);  
 	}
-	.markItUp .padding .top a {
+	.html .padding .top a {
 		background-image:url(images/text_padding_top.png);  
 	}
-	.markItUp .padding .right a {
+	.html .padding .right a {
 		background-image:url(images/text_padding_right.png);  
 	}
-	.markItUp .padding .bottom a {
+	.html .padding .bottom a {
 		background-image:url(images/text_padding_bottom.png); 
 	}
-.markItUp .background a {
+.html .background a {
 	background-image:url(images/picture.png); 
 }
-.markItUp .css a {
+.html .css a {
 	background-image:url(images/css.png); 
 }
