--- a/public/stylesheets/markitup/sets/default/style.css
+++ b/public/stylesheets/markitup/sets/default/style.css
@@ -1,34 +1,34 @@
 /* -------------------------------------------------------------------
-// markItUp!
+// default!
 // By Jay Salvat - http://markitup.jaysalvat.com/
 // ------------------------------------------------------------------*/
-.markItUp .markItUpButton1 a {
+.default .markItUpButton1 a {
 	background-image:url(images/bold.png);
 }
-.markItUp .markItUpButton2 a {
+.default .markItUpButton2 a {
 	background-image:url(images/italic.png);
 }
-.markItUp .markItUpButton3 a {
+.default .markItUpButton3 a {
 	background-image:url(images/stroke.png);
 }
 
-.markItUp .markItUpButton4 a {
+.default .markItUpButton4 a {
 	background-image:url(images/list-bullet.png); 
 }
-.markItUp .markItUpButton5 a {
+.default .markItUpButton5 a {
 	background-image:url(images/list-numeric.png);
 }
 
-.markItUp .markItUpButton6 a {
+.default .markItUpButton6 a {
 	background-image:url(images/picture.png); 
 }
-.markItUp .markItUpButton7 a {
+.default .markItUpButton7 a {
 	background-image:url(images/link.png);
 }
 
-.markItUp .markItUpButton8 a {
+.default .markItUpButton8 a {
 	background-image:url(images/clean.png);
 }
-.markItUp .preview a {
+.default .preview a {
 	background-image:url(images/preview.png);
 }
